--- a/pages/super-admin/add_coaches.html
+++ b/pages/super-admin/add_coaches.html
@@ -120,6 +120,46 @@
                             <td></td><td></td>
                             <td> <button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important;">Edit</button></td>
                           </tr>
+                          <tr>
+                            <td>
+                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              Karina@gmail.com
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important;">Edit</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              Karina@gmail.com
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important;">Edit</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              Karina@gmail.com
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important;">Edit</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              Karina@gmail.com
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important;">Edit</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              Karina@gmail.com
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important;">Edit</button></td>
+                          </tr>
                         </tbody>
                       </table>
                     </div>
