--- a/pages/super-admin/add_users.html
+++ b/pages/super-admin/add_users.html
@@ -47,7 +47,7 @@
                         
                           <tr>
                            <div class="search-field d-none d-md-block">
-                            <form class="d-flex align-items-center h-100" action="#">
+                            <form class="d-flex align-items-center h-100" action="#" style="padding-top: 40px;">
                               
                                 <div class="input-group" style="border: none; ">                                  
                                    <label class="form-control form-check-label" style="border: none; 
@@ -94,6 +94,118 @@
                             <td>
                               <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> John Doe <br><br>
                               Marina@gmail.com
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              Karina@gmail.com
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              Karina@gmail.com
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              Karina@gmail.com
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              Karina@gmail.com
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              Karina@gmail.com
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              Karina@gmail.com
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              Karina@gmail.com
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              Karina@gmail.com
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              Karina@gmail.com
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              Karina@gmail.com
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              Karina@gmail.com
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              Karina@gmail.com
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              Karina@gmail.com
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              Karina@gmail.com
                             </td>
                             <td></td><td></td>
                             <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
