--- a/pages/super-admin/payment.html
+++ b/pages/super-admin/payment.html
@@ -76,31 +76,53 @@
                             </thead>
                             <tbody>
                               <tr>
-                                <td>Order #828792<a href="your-file-path" download>
-                                   Download
-                                </a><br><br>
-                                <label>[Subscription] #828792<br>ECoaching 1 Site - Parent Order</label></td>
+                                <td>Order #828792<a href="your-file-path" download>Download</a><br><br>
+                                <label>[Subscription] #828792<br><br>ECoaching 1 Site - Parent Order</label></td>
                                 <td> <label for="date">April 3, 2023 </label></td>
                                 <td><label for="amount">$288.90 </label></td>
-                                  <td><label for="status">Succeed </label></td>                                                                    
+                                <td><label for="status">Succeed </label></td>                                                                    
                               </tr>
                               <tr>
-                                <td>Order #828792<a href="your-file-path" download>
-                                   Download
-                                </a><br><br>
-                                  <label>[Subscription] #828792<br>ECoaching 1 Site - Parent Order</label></td>
+                                <td>Order #828792<a href="your-file-path" download>Download</a><br><br>
+                                <label>[Subscription] #828792<br><br>ECoaching 1 Site - Parent Order</label></td>
                                 <td> <label for="date">April 3, 2023 </label></td>
                                 <td><label for="amount">$288.90 </label></td>
-                                  <td><label for="status">Succeed </label></td>                                                                    
+                                <td><label for="status">Succeed </label></td>                                                                    
                               </tr>
                               <tr>
-                                <td>Order #828792<a href="your-file-path" download>
-                                   Download
-                                </a><br><br>
-                                  <label>[Subscription] #828792<br>ECoaching 1 Site - Parent Order</label></td>
+                                <td>Order #828792<a href="your-file-path" download>Download</a><br><br>
+                                <label>[Subscription] #828792<br><br>ECoaching 1 Site - Parent Order</label></td>
                                 <td> <label for="date">April 3, 2023 </label></td>
                                 <td><label for="amount">$288.90 </label></td>
-                                  <td><label for="status">Succeed </label></td>                                                                    
+                                <td><label for="status">Succeed </label></td>                                                                    
+                              </tr>
+                              <tr>
+                                <td>Order #828792<a href="your-file-path" download>Download</a><br><br>
+                                <label>[Subscription] #828792<br><br>ECoaching 1 Site - Parent Order</label></td>
+                                <td> <label for="date">April 3, 2023 </label></td>
+                                <td><label for="amount">$288.90 </label></td>
+                                <td><label for="status">Succeed </label></td>                                                                    
+                              </tr>
+                              <tr>
+                                <td>Order #828792<a href="your-file-path" download>Download</a><br><br>
+                                <label>[Subscription] #828792<br><br>ECoaching 1 Site - Parent Order</label></td>
+                                <td> <label for="date">April 3, 2023 </label></td>
+                                <td><label for="amount">$288.90 </label></td>
+                                <td><label for="status">Succeed </label></td>                                                                    
+                              </tr>
+                              <tr>
+                                <td>Order #828792<a href="your-file-path" download>Download</a><br><br>
+                                <label>[Subscription] #828792<br><br>ECoaching 1 Site - Parent Order</label></td>
+                                <td> <label for="date">April 3, 2023 </label></td>
+                                <td><label for="amount">$288.90 </label></td>
+                                <td><label for="status">Succeed </label></td>                                                                    
+                              </tr>
+                              <tr>
+                                <td>Order #828792<a href="your-file-path" download>Download</a><br><br>
+                                <label>[Subscription] #828792<br><br>ECoaching 1 Site - Parent Order</label></td>
+                                <td> <label for="date">April 3, 2023 </label></td>
+                                <td><label for="amount">$288.90 </label></td>
+                                <td><label for="status">Succeed </label></td>                                                                    
                               </tr>
                          
                             </tbody>
