--- a/pages/super-admin/report_generation.html
+++ b/pages/super-admin/report_generation.html
@@ -80,7 +80,7 @@
                   <div class="card-body mini-marg"> 
                     <div class="row">
                         <div class="col-md-3">
-                    <img src="\assets/images/faces/face1.jpg" class="me-2" alt="image"> </div>
+                    <img src="\assets/images/faces/report.png" class="me-2" alt="image"> </div>
                     <div class="col-md-9">
                       <h6>User Memberships Data</h6>                                                                                           
                              <label for="info" class="card-label">Lorem ipsum dolor sit amet, consectetur adipiscing elit</label>
@@ -98,7 +98,7 @@
                     <div class="card-body mini-marg"> 
                       <div class="row">
                         <div class="col-md-3">
-                    <img src="\assets/images/faces/face1.jpg" class="me-2" alt="image"> </div>
+                    <img src="\assets/images/faces/report.png" class="me-2" alt="image"> </div>
                     <div class="col-md-9">
                       <h6>Sales Report</h6>                                                                                           
                              <label for="info" class="card-label">Lorem ipsum dolor sit amet, consectetur adipiscing elit</label>
@@ -115,7 +115,7 @@
                     <div class="card-body mini-marg"> 
                       <div class="row">
                         <div class="col-md-3">
-                    <img src="\assets/images/faces/face1.jpg" class="me-2" alt="image"> </div>
+                    <img src="\assets/images/faces/report.png" class="me-2" alt="image"> </div>
                     <div class="col-md-9">
                       <h6>How to create a workout</h6>                                                                                           
                              <label for="info" class="card-label">Lorem ipsum dolor sit amet, consectetur adipiscing elit</label>
@@ -137,7 +137,7 @@
                     <div class="card-body mini-marg"> 
                       <div class="row">
                         <div class="col-md-3">
-                    <img src="\assets/images/faces/face1.jpg" class="me-2" alt="image"> </div>
+                    <img src="\assets/images/faces/report.png" class="me-2" alt="image"> </div>
                     <div class="col-md-9">
                       <h6>User Memberships Data</h6>                                                                                           
                              <label for="info" class="card-label">Lorem ipsum dolor sit amet, consectetur adipiscing elit</label>
@@ -154,7 +154,7 @@
                       <div class="card-body mini-marg"> 
                         <div class="row">
                           <div class="col-md-3">
-                      <img src="\assets/images/faces/face1.jpg" class="me-2" alt="image"> </div>
+                      <img src="\assets/images/faces/report.png" class="me-2" alt="image"> </div>
                       <div class="col-md-9">
                         <h6>User Memberships Data</h6>                                                                                           
                                <label for="info" class="card-label">Lorem ipsum dolor sit amet, consectetur adipiscing elit</label>
@@ -172,7 +172,7 @@
                       <div class="card-body mini-marg"> 
                         <div class="row">
                           <div class="col-md-3">
-                      <img src="\assets/images/faces/face1.jpg" class="me-2" alt="image"> </div>
+                      <img src="\assets/images/faces/report.png" class="me-2" alt="image"> </div>
                       <div class="col-md-9">
                         <h6>User Memberships Data</h6>                                                                                           
                                <label for="info" class="card-label">Lorem ipsum dolor sit amet, consectetur adipiscing elit</label>
@@ -194,7 +194,7 @@
                     <div class="card-body mini-marg"> 
                       <div class="row">
                         <div class="col-md-3">
-                    <img src="\assets/images/faces/face1.jpg" class="me-2" alt="image"> </div>
+                    <img src="\assets/images/faces/report.png" class="me-2" alt="image"> </div>
                     <div class="col-md-9">
                       <h6>User Memberships Data</h6>                                                                                           
                              <label for="info" class="card-label">Lorem ipsum dolor sit amet, consectetur adipiscing elit</label>
@@ -211,7 +211,7 @@
                       <div class="card-body mini-marg"> 
                         <div class="row">
                           <div class="col-md-3">
-                      <img src="\assets/images/faces/face1.jpg" class="me-2" alt="image"> </div>
+                      <img src="\assets/images/faces/report.png class="me-2" alt="image"> </div>
                       <div class="col-md-9">
                         <h6>User Memberships Data</h6>                                                                                           
                                <label for="info" class="card-label">Lorem ipsum dolor sit amet, consectetur adipiscing elit</label>
@@ -228,7 +228,109 @@
                       <div class="card-body mini-marg"> 
                         <div class="row">
                           <div class="col-md-3">
-                      <img src="\assets/images/faces/face1.jpg" class="me-2" alt="image"> </div>
+                      <img src="\assets/images/faces/report.png" class="me-2" alt="image"> </div>
+                      <div class="col-md-9">
+                        <h6>User Memberships Data</h6>                                                                                           
+                               <label for="info" class="card-label">Lorem ipsum dolor sit amet, consectetur adipiscing elit</label>
+                               <a href="your-file-path" download>
+                                <i class="mdi mdi-download"></i>
+                             </a>                                                        
+                      </div>
+                  </div>                                                                                                        
+                      </div>
+                  </div>
+                </div>
+                <div class="col-md-4 stretch-card grid-margin">
+                  <div class="card  card-img-holder ">
+                      <div class="card-body mini-marg"> 
+                        <div class="row">
+                          <div class="col-md-3">
+                      <img src="\assets/images/faces/report.png" class="me-2" alt="image"> </div>
+                      <div class="col-md-9">
+                        <h6>User Memberships Data</h6>                                                                                           
+                               <label for="info" class="card-label">Lorem ipsum dolor sit amet, consectetur adipiscing elit</label>
+                               <a href="your-file-path" download>
+                                <i class="mdi mdi-download"></i>
+                             </a>                                                        
+                      </div>
+                  </div>                                                                                                        
+                      </div>
+                  </div>
+                </div>
+                <div class="col-md-4 stretch-card grid-margin">
+                  <div class="card  card-img-holder ">
+                      <div class="card-body mini-marg"> 
+                        <div class="row">
+                          <div class="col-md-3">
+                      <img src="\assets/images/faces/report.png" class="me-2" alt="image"> </div>
+                      <div class="col-md-9">
+                        <h6>User Memberships Data</h6>                                                                                           
+                               <label for="info" class="card-label">Lorem ipsum dolor sit amet, consectetur adipiscing elit</label>
+                               <a href="your-file-path" download>
+                                <i class="mdi mdi-download"></i>
+                             </a>                                                        
+                      </div>
+                  </div>                                                                                                        
+                      </div>
+                  </div>
+                </div>
+                <div class="col-md-4 stretch-card grid-margin">
+                  <div class="card  card-img-holder ">
+                      <div class="card-body mini-marg"> 
+                        <div class="row">
+                          <div class="col-md-3">
+                      <img src="\assets/images/faces/report.png" class="me-2" alt="image"> </div>
+                      <div class="col-md-9">
+                        <h6>User Memberships Data</h6>                                                                                           
+                               <label for="info" class="card-label">Lorem ipsum dolor sit amet, consectetur adipiscing elit</label>
+                               <a href="your-file-path" download>
+                                <i class="mdi mdi-download"></i>
+                             </a>                                                        
+                      </div>
+                  </div>                                                                                                        
+                      </div>
+                  </div>
+                </div>
+                <div class="col-md-4 stretch-card grid-margin">
+                  <div class="card  card-img-holder ">
+                      <div class="card-body mini-marg"> 
+                        <div class="row">
+                          <div class="col-md-3">
+                      <img src="\assets/images/faces/report.png" class="me-2" alt="image"> </div>
+                      <div class="col-md-9">
+                        <h6>User Memberships Data</h6>                                                                                           
+                               <label for="info" class="card-label">Lorem ipsum dolor sit amet, consectetur adipiscing elit</label>
+                               <a href="your-file-path" download>
+                                <i class="mdi mdi-download"></i>
+                             </a>                                                        
+                      </div>
+                  </div>                                                                                                        
+                      </div>
+                  </div>
+                </div>
+                <div class="col-md-4 stretch-card grid-margin">
+                  <div class="card  card-img-holder ">
+                      <div class="card-body mini-marg"> 
+                        <div class="row">
+                          <div class="col-md-3">
+                      <img src="\assets/images/faces/report.png" class="me-2" alt="image"> </div>
+                      <div class="col-md-9">
+                        <h6>User Memberships Data</h6>                                                                                           
+                               <label for="info" class="card-label">Lorem ipsum dolor sit amet, consectetur adipiscing elit</label>
+                               <a href="your-file-path" download>
+                                <i class="mdi mdi-download"></i>
+                             </a>                                                        
+                      </div>
+                  </div>                                                                                                        
+                      </div>
+                  </div>
+                </div>
+                <div class="col-md-4 stretch-card grid-margin">
+                  <div class="card  card-img-holder ">
+                      <div class="card-body mini-marg"> 
+                        <div class="row">
+                          <div class="col-md-3">
+                      <img src="\assets/images/faces/report.png" class="me-2" alt="image"> </div>
                       <div class="col-md-9">
                         <h6>User Memberships Data</h6>                                                                                           
                                <label for="info" class="card-label">Lorem ipsum dolor sit amet, consectetur adipiscing elit</label>
@@ -305,6 +407,56 @@
                         Sarahone!@gmail.com</label></td>
                         <td><button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw" >Open</button></td>                                                                                                                                       
                       </tr>
+                      <tr>
+                        <td class="card-label1"><label class="card-label">Sales Report<br>
+                        Sarahone!@gmail.com</label></td>
+                        <td><button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw" >Open</button></td>                                                                                                                                       
+                      </tr>
+                      <tr>
+                        <td class="card-label1"><label class="card-label">Sales Report<br>
+                        Sarahone!@gmail.com</label></td>
+                        <td><button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw" >Open</button></td>                                                                                                                                       
+                      </tr>
+                      <tr>
+                        <td class="card-label1"><label class="card-label">Sales Report<br>
+                        Sarahone!@gmail.com</label></td>
+                        <td><button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw" >Open</button></td>                                                                                                                                       
+                      </tr>
+                      <tr>
+                        <td class="card-label1"><label class="card-label">Sales Report<br>
+                        Sarahone!@gmail.com</label></td>
+                        <td><button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw" >Open</button></td>                                                                                                                                       
+                      </tr>
+                      <tr>
+                        <td class="card-label1"><label class="card-label">Sales Report<br>
+                        Sarahone!@gmail.com</label></td>
+                        <td><button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw" >Open</button></td>                                                                                                                                       
+                      </tr>
+                      <tr>
+                        <td class="card-label1"><label class="card-label">Sales Report<br>
+                        Sarahone!@gmail.com</label></td>
+                        <td><button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw" >Open</button></td>                                                                                                                                       
+                      </tr>
+                      <tr>
+                        <td class="card-label1"><label class="card-label">Sales Report<br>
+                        Sarahone!@gmail.com</label></td>
+                        <td><button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw" >Open</button></td>                                                                                                                                       
+                      </tr>
+                      <tr>
+                        <td class="card-label1"><label class="card-label">Sales Report<br>
+                        Sarahone!@gmail.com</label></td>
+                        <td><button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw" >Open</button></td>                                                                                                                                       
+                      </tr>
+                      <tr>
+                        <td class="card-label1"><label class="card-label">Sales Report<br>
+                        Sarahone!@gmail.com</label></td>
+                        <td><button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw" >Open</button></td>                                                                                                                                       
+                      </tr>
+                      <tr>
+                        <td class="card-label1"><label class="card-label">Sales Report<br>
+                        Sarahone!@gmail.com</label></td>
+                        <td><button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw" >Open</button></td>                                                                                                                                       
+                      </tr>
                  
                     </tbody>
                   </table>
@@ -326,7 +478,7 @@
     // labels: ['Label 1', 'Label 2'],
     datasets: [{
       data: [81 , 19], // Your values here
-      backgroundColor: ['#E2D5FF', '#ffe6e6', ], // Colors for each segment
+      backgroundColor: ['#E2D5FF', '#a68edb', ], // Colors for each segment
     }]
   };
 
@@ -364,7 +516,7 @@
     // labels: ['Label 1', 'Label 2'],
     datasets: [{
       data: [22, 78], // Your values here
-      backgroundColor: ['#ffe6e6', '#E2D5FF'], // Colors for each segment
+      backgroundColor: ['#E2D5FF', '#a68edb'], // Colors for each segment
     }]
   };
 
@@ -403,7 +555,7 @@
     // labels: ['Label 1', 'Label 2'],
     datasets: [{
       data: [62, 48], // Your values here
-      backgroundColor: ['#6d2cf9', '#dff0fa', ], // Colors for each segment
+      backgroundColor: ['#E2D5FF', '#a68edb', ], // Colors for each segment
     }]
   };
   // Chart configuration
