--- a/pages/super-admin/add_exercise.html
+++ b/pages/super-admin/add_exercise.html
@@ -76,7 +76,7 @@
                           <tr>
                             <td style="width: 100%;">
                               <img src="\assets/images/faces/face1.jpg" class="me-2" alt="image"> Barbell Bench Press<br><br>
-                               Chest
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                             </td>
                             <td  style="width: 100%;"></td><td style="width: 100%;"></td>
                             <td> <button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important;">Open</button></td>
@@ -84,7 +84,7 @@
                           <tr>
                             <td>
                               <img src="\assets/images/faces/face2.jpg" class="me-2" alt="image" > Barbell Bench Press  <br><br>
-                              Chest
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                             </td>
                             <td></td><td></td>
                             <td> <button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important;">Open</button> </td>
@@ -92,7 +92,7 @@
                           <tr>
                             <td>
                               <img src="\assets/images/faces/face3.jpg" class="me-2" alt="image"> Barbell Bench Press  <br><br>
-                              Chest
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                             </td>
                             <td></td><td></td>
                             <td> <button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important;">Open</button></td>
@@ -100,7 +100,7 @@
                           <tr>
                             <td>
                               <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Barbell Bench Press <br><br>
-                              Chest
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                             </td>
                             <td></td><td></td>
                             <td> <button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important;">Open</button></td>
@@ -108,7 +108,47 @@
                           <tr>
                             <td>
                               <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Barbell Bench Press <br><br>
-                              Chest
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important;">Open</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Barbell Bench Press <br><br>
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important;">Open</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Barbell Bench Press <br><br>
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important;">Open</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Barbell Bench Press <br><br>
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important;">Open</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Barbell Bench Press <br><br>
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important;">Open</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Barbell Bench Press <br><br>
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                             </td>
                             <td></td><td></td>
                             <td> <button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important;">Open</button></td>
