--- a/pages/super-admin/add_memberships.html
+++ b/pages/super-admin/add_memberships.html
@@ -45,7 +45,7 @@
                           <tr>
                            <div class="search-field d-none d-md-block">
                             <form class="d-flex align-items-center h-100" action="#">  
-                              <div class="input-group" style="border: none; ">                                  
+                              <div class="input-group" style="border: none; padding-top: 40px;;">                                  
                                 <label class="form-control form-check-label1" style="border: none; 
                                 "><img src="../../assets/images/faces/face1.jpg" class="me-2" alt="image" style="border-radius: 50px; width: 40px; height: 40px !important;margin-left: -10px;">Coach Mohan</label>
                              
@@ -121,6 +121,186 @@
                               </div>
                             </div>
                           </div>
+                          <div class="col-md-4 stretch-card grid-margin">
+                            <div class="card  card-img-holder ">
+                              <div class="card-body mini-marg">
+                                <div class="video-container">
+                                <video controls class="vid1">
+                                  <source src="your_video.mp4" type="video/mp4">
+                                  Your browser does not support the video tag.
+                              </video></div><br>
+                              <h5><span class="fontbackg" >FRONTEND</span></h5>
+                              <h5>Membership name</h5>
+                              <div class="progress">
+                                <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                              </div><br>
+                              <div class="description">   
+                                <div class="row">
+                                  <div class="col-md-4">                            
+                                    <p class="txt2">5 Programs</p>
+                                  </div>
+                                  <div class="col-md-4">                            
+                                  <p class="txt2">17 Workouts</p>
+                                </div>
+                                <div class="col-md-4">                            
+                                  <p class="txt2">331 Users</p>
+                                </div>
+                                </div> 
+                              </div>
+                              </div>
+                            </div>
+                          </div>
+
+                          <div class="col-md-4 stretch-card grid-margin">
+                            <div class="card  card-img-holder ">
+                              <div class="card-body mini-marg">
+                                <div class="video-container">
+                                <video controls class="vid1">
+                                  <source src="your_video.mp4" type="video/mp4">
+                                  Your browser does not support the video tag.
+                              </video></div><br>
+                              <h5><span class="fontbackg" >FRONTEND</span></h5>
+                              <h5>Membership name</h5>
+                              <div class="progress">
+                                <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                              </div><br>
+                              <div class="description">   
+                                <div class="row">
+                                  <div class="col-md-4">                            
+                                    <p class="txt2">5 Programs</p>
+                                  </div>
+                                  <div class="col-md-4">                            
+                                  <p class="txt2">17 Workouts</p>
+                                </div>
+                                <div class="col-md-4">                            
+                                  <p class="txt2">331 Users</p>
+                                </div>
+                                </div> 
+                              </div>
+                              </div>
+                            </div>
+                          </div>
+
+                          <div class="col-md-4 stretch-card grid-margin">
+                            <div class="card  card-img-holder ">
+                              <div class="card-body mini-marg">
+                                <div class="video-container">
+                                <video controls class="vid1">
+                                  <source src="your_video.mp4" type="video/mp4">
+                                  Your browser does not support the video tag.
+                              </video></div><br>
+                              <h5><span class="fontbackg" >FRONTEND</span></h5>
+                              <h5>Membership name</h5>
+                              <div class="progress">
+                                <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                              </div><br>
+                              <div class="description">   
+                                <div class="row">
+                                  <div class="col-md-4">                            
+                                    <p class="txt2">5 Programs</p>
+                                  </div>
+                                  <div class="col-md-4">                            
+                                  <p class="txt2">17 Workouts</p>
+                                </div>
+                                <div class="col-md-4">                            
+                                  <p class="txt2">331 Users</p>
+                                </div>
+                                </div> 
+                              </div>
+                              </div>
+                            </div>
+                          </div>
+
+                          <div class="col-md-4 stretch-card grid-margin">
+                            <div class="card  card-img-holder ">
+                              <div class="card-body mini-marg">
+                                <div class="video-container">
+                                <video controls class="vid1">
+                                  <source src="your_video.mp4" type="video/mp4">
+                                  Your browser does not support the video tag.
+                              </video></div><br>
+                              <h5><span class="fontbackg" >FRONTEND</span></h5>
+                              <h5>Membership name</h5>
+                              <div class="progress">
+                                <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                              </div><br>
+                              <div class="description">   
+                                <div class="row">
+                                  <div class="col-md-4">                            
+                                    <p class="txt2">5 Programs</p>
+                                  </div>
+                                  <div class="col-md-4">                            
+                                  <p class="txt2">17 Workouts</p>
+                                </div>
+                                <div class="col-md-4">                            
+                                  <p class="txt2">331 Users</p>
+                                </div>
+                                </div> 
+                              </div>
+                              </div>
+                            </div>
+                          </div>
+
+                          <div class="col-md-4 stretch-card grid-margin">
+                            <div class="card  card-img-holder ">
+                              <div class="card-body mini-marg">
+                                <div class="video-container">
+                                <video controls class="vid1">
+                                  <source src="your_video.mp4" type="video/mp4">
+                                  Your browser does not support the video tag.
+                              </video></div><br>
+                              <h5><span class="fontbackg" >FRONTEND</span></h5>
+                              <h5>Membership name</h5>
+                              <div class="progress">
+                                <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                              </div><br>
+                              <div class="description">   
+                                <div class="row">
+                                  <div class="col-md-4">                            
+                                    <p class="txt2">5 Programs</p>
+                                  </div>
+                                  <div class="col-md-4">                            
+                                  <p class="txt2">17 Workouts</p>
+                                </div>
+                                <div class="col-md-4">                            
+                                  <p class="txt2">331 Users</p>
+                                </div>
+                                </div> 
+                              </div>
+                              </div>
+                            </div>
+                          </div>
+
+                          <div class="col-md-4 stretch-card grid-margin">
+                            <div class="card  card-img-holder ">
+                              <div class="card-body mini-marg">
+                                <div class="video-container">
+                                <video controls class="vid1">
+                                  <source src="your_video.mp4" type="video/mp4">
+                                  Your browser does not support the video tag.
+                              </video></div><br>
+                              <h5><span class="fontbackg" >FRONTEND</span></h5>
+                              <h5>Membership name</h5>
+                              <div class="progress">
+                                <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                              </div><br>
+                              <div class="description">   
+                                <div class="row">
+                                  <div class="col-md-4">                            
+                                    <p class="txt2">5 Programs</p>
+                                  </div>
+                                  <div class="col-md-4">                            
+                                  <p class="txt2">17 Workouts</p>
+                                </div>
+                                <div class="col-md-4">                            
+                                  <p class="txt2">331 Users</p>
+                                </div>
+                                </div> 
+                              </div>
+                              </div>
+                            </div>
+                          </div>
+
                           <div class="col-md-4 stretch-card grid-margin">
                             <div class="card  card-img-holder ">
                               <div class="card-body mini-marg">
