--- a/pages/super-admin/add_programs.html
+++ b/pages/super-admin/add_programs.html
@@ -136,6 +136,169 @@
                               </div>
                             </div>
                           </div>
+                          <div class="col-md-4 stretch-card grid-margin">
+                            <div class="card  card-img-holder ">
+                              <div class="card-body">
+                                <div class="video-container">
+                                <video controls class="vid1">
+                                  <source src="your_video.mp4" type="video/mp4">
+                                  Your browser does not support the video tag.
+                              </video></div><br>
+                              <h5><span class="fontbackg" >FRONTEND</span></h5>
+                              <h5>Phase 3</h5>
+                              <div class="progress">
+                                <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                              </div><br>
+                              <div class="description">   
+                                <div class="row">
+                                  <div class="col-md-7">                            
+                                  <p class="txt1">17 Workouts</p>
+                                </div>
+                                <div class="col-md-5">                            
+                                  <p class="txt1">331 Users</p>
+                                </div>
+                                </div> 
+                              </div>
+                              </div>
+                            </div>
+                          </div>
+
+                          <div class="col-md-4 stretch-card grid-margin">
+                            <div class="card  card-img-holder ">
+                              <div class="card-body">
+                                <div class="video-container">
+                                <video controls class="vid1">
+                                  <source src="your_video.mp4" type="video/mp4">
+                                  Your browser does not support the video tag.
+                              </video></div><br>
+                              <h5><span class="fontbackg" >FRONTEND</span></h5>
+                              <h5>Phase 3</h5>
+                              <div class="progress">
+                                <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                              </div><br>
+                              <div class="description">   
+                                <div class="row">
+                                  <div class="col-md-7">                            
+                                  <p class="txt1">17 Workouts</p>
+                                </div>
+                                <div class="col-md-5">                            
+                                  <p class="txt1">331 Users</p>
+                                </div>
+                                </div> 
+                              </div>
+                              </div>
+                            </div>
+                          </div>
+
+                          <div class="col-md-4 stretch-card grid-margin">
+                            <div class="card  card-img-holder ">
+                              <div class="card-body">
+                                <div class="video-container">
+                                <video controls class="vid1">
+                                  <source src="your_video.mp4" type="video/mp4">
+                                  Your browser does not support the video tag.
+                              </video></div><br>
+                              <h5><span class="fontbackg" >FRONTEND</span></h5>
+                              <h5>Phase 3</h5>
+                              <div class="progress">
+                                <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                              </div><br>
+                              <div class="description">   
+                                <div class="row">
+                                  <div class="col-md-7">                            
+                                  <p class="txt1">17 Workouts</p>
+                                </div>
+                                <div class="col-md-5">                            
+                                  <p class="txt1">331 Users</p>
+                                </div>
+                                </div> 
+                              </div>
+                              </div>
+                            </div>
+                          </div>
+
+                          <div class="col-md-4 stretch-card grid-margin">
+                            <div class="card  card-img-holder ">
+                              <div class="card-body">
+                                <div class="video-container">
+                                <video controls class="vid1">
+                                  <source src="your_video.mp4" type="video/mp4">
+                                  Your browser does not support the video tag.
+                              </video></div><br>
+                              <h5><span class="fontbackg" >FRONTEND</span></h5>
+                              <h5>Phase 3</h5>
+                              <div class="progress">
+                                <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                              </div><br>
+                              <div class="description">   
+                                <div class="row">
+                                  <div class="col-md-7">                            
+                                  <p class="txt1">17 Workouts</p>
+                                </div>
+                                <div class="col-md-5">                            
+                                  <p class="txt1">331 Users</p>
+                                </div>
+                                </div> 
+                              </div>
+                              </div>
+                            </div>
+                          </div>
+
+                          <div class="col-md-4 stretch-card grid-margin">
+                            <div class="card  card-img-holder ">
+                              <div class="card-body">
+                                <div class="video-container">
+                                <video controls class="vid1">
+                                  <source src="your_video.mp4" type="video/mp4">
+                                  Your browser does not support the video tag.
+                              </video></div><br>
+                              <h5><span class="fontbackg" >FRONTEND</span></h5>
+                              <h5>Phase 3</h5>
+                              <div class="progress">
+                                <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                              </div><br>
+                              <div class="description">   
+                                <div class="row">
+                                  <div class="col-md-7">                            
+                                  <p class="txt1">17 Workouts</p>
+                                </div>
+                                <div class="col-md-5">                            
+                                  <p class="txt1">331 Users</p>
+                                </div>
+                                </div> 
+                              </div>
+                              </div>
+                            </div>
+                          </div>
+
+                          <div class="col-md-4 stretch-card grid-margin">
+                            <div class="card  card-img-holder ">
+                              <div class="card-body">
+                                <div class="video-container">
+                                <video controls class="vid1">
+                                  <source src="your_video.mp4" type="video/mp4">
+                                  Your browser does not support the video tag.
+                              </video></div><br>
+                              <h5><span class="fontbackg" >FRONTEND</span></h5>
+                              <h5>Phase 3</h5>
+                              <div class="progress">
+                                <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                              </div><br>
+                              <div class="description">   
+                                <div class="row">
+                                  <div class="col-md-7">                            
+                                  <p class="txt1">17 Workouts</p>
+                                </div>
+                                <div class="col-md-5">                            
+                                  <p class="txt1">331 Users</p>
+                                </div>
+                                </div> 
+                              </div>
+                              </div>
+                            </div>
+                          </div>
+
+
                         </div>                                                                                                                               
                         </tbody>
                       </table>
