--- a/pages/super-admin/add_workouts.html
+++ b/pages/super-admin/add_workouts.html
@@ -82,15 +82,14 @@
                           <tr>
                             <td style="width: 100%;">
                               <img src="\assets/images/faces/face1.jpg" class="me-2" alt="image"> Workout 1<br><br>
-                               Chest
-                            </td>
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                             <td  style="width: 100%;"></td><td style="width: 100%;"></td>
                             <td> <button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important;">Customise Workout</button></td>
                           </tr>
                           <tr>
                             <td>
                               <img src="\assets/images/faces/face2.jpg" class="me-2" alt="image" > Workout 2 <br><br>
-                              Chest
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                             </td>
                             <td></td><td></td>
                             <td> <button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important;">Customise Workout</button> </td>
@@ -98,7 +97,7 @@
                           <tr>
                             <td>
                               <img src="\assets/images/faces/face3.jpg" class="me-2" alt="image"> Workout 3  <br><br>
-                              Chest
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                             </td>
                             <td></td><td></td>
                             <td> <button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important;">Customise Workout</button></td>
@@ -106,7 +105,7 @@
                           <tr>
                             <td>
                               <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Workout 4 <br><br>
-                              Chest
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                             </td>
                             <td></td><td></td>
                             <td> <button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important;">Customise Workout</button></td>
@@ -114,7 +113,79 @@
                           <tr>
                             <td>
                               <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Workout 5<br><br>
-                              Chest
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important;">Customise Workout</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Workout 5<br><br>
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important;">Customise Workout</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Workout 5<br><br>
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important;">Customise Workout</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Workout 5<br><br>
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important;">Customise Workout</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Workout 5<br><br>
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important;">Customise Workout</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Workout 5<br><br>
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important;">Customise Workout</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Workout 5<br><br>
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important;">Customise Workout</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Workout 5<br><br>
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important;">Customise Workout</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Workout 5<br><br>
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important;">Customise Workout</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Workout 5<br><br>
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                             </td>
                             <td></td><td></td>
                             <td> <button type="button" class="btn2 btn-gradient-primary btn-rounded btn-fw" style="padding: 10px 30px !important; border-radius: 25px !important;">Customise Workout</button></td>
