--- a/pages/super-admin/edit_users.html
+++ b/pages/super-admin/edit_users.html
@@ -50,9 +50,9 @@
                           <tr>
                            <div class="search-field d-none d-md-block">
                             <form class="d-flex align-items-center h-100" action="#">
-                              <div class="input-group" style="border: none; ">                                  
+                              <div class="input-group" style="border: none;">                                  
                                 <label class="form-control form-check-label1" style="border: none; 
-                                font-size: 1.125rem;"><img src="../../assets/images/faces/face1.jpg" class="me-2" alt="image" style="border-radius: 50px; width: 40px; height: 40px !important;margin-left: -10px;">Coach Mohan</label>
+                                font-size: 1.125rem; padding-top: 40px;"><img src="../../assets/images/faces/face1.jpg" class="me-2" alt="image" style="border-radius: 50px; width: 40px; height: 40px !important;margin-left: -10px;">Coach Mohan</label>
                              
                                </div>  
                                 <div class="input-group" style="border: none; ">                                  
