--- a/pages/super-admin/edit_users.html
+++ b/pages/super-admin/edit_users.html
@@ -29,12 +29,9 @@
   </head>
 
   <body>
-    
     <div id="baseHeader"></div> 
-
-
       <div class="container-fluid page-body-wrapper">
-        <div id="side-bar"></div> 
+        <div id="sidebar"></div>
 
         <div class="main-panel">
           <div class="content-wrapper">
