--- a/pages/super-admin/add_memberships.html
+++ b/pages/super-admin/add_memberships.html
@@ -45,7 +45,7 @@
                           <tr>
                            <div class="search-field d-none d-md-block">
                             <form class="d-flex align-items-center h-100" action="#">  
-                              <div class="input-group" style="border: none; padding-top: 40px;;">                                  
+                              <div class="input-group" style="border: none;">                                  
                                 <label class="form-control form-check-label1" style="border: none; 
                                 "><img src="../../assets/images/faces/face1.jpg" class="me-2" alt="image" style="border-radius: 50px; width: 40px; height: 40px !important;margin-left: -10px;">Coach Mohan</label>
                              
